# diffygif

./: changelog.md  default.nix  diffgif.cabal  diffgif.nix  diffygif.cabal  diffygif.nix  shell.nix
exe/: Main.hs
src/: Scratch.hs
src/DiffyGif/: Diff.hs  Error.hs  Gif.hs  Slides.hs
test-data-1/: metadata  test00.hs  test01.hs  test02.hs  test03.hs  test05.hs  test06.hs
test-data-2/: test00.hs  test00a.hs  test01.hs  test01a.hs  test02.hs  test03.hs
test-nix/: default.nix
