name:                diffygif
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENCE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10

library
  exposed-modules:     DiffyGif.Slides
                     , DiffyGif.Diff
                     , DiffyGif.Gif
                     , DiffyGif.Error
  build-depends:       base >=4.9 && <4.10
                     , mtl >=2.2 && <2.3
                     , bytestring
                     , filepath
                     , directory
                     , Diff
                     , data-default
                     , pandoc
                     , skylighting
                     , hex
                     , JuicyPixels
                     , errors
                     , process
                     , temporary
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable runme
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , mtl >=2.2 && <2.3
                     , bytestring
                     , data-default
                     , diffygif
  hs-source-dirs:      exe
  default-language:    Haskell2010
  
